--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,7 +1,11 @@
 .profile-section{
     border: 2px solid red;
+    padding: 20px;
 }
-
+.name h3{
+    font-weight: bold;
+    font-size: 25px;
+}
 .profile-img img{
     width: 15%;
     border-radius: 50%;
@@ -13,6 +17,10 @@
           margin-bottom: 20px;
    
 }
+.weight{
+   color: #999;
+   font-weight: 500;
+}
 .profile-desc{
     display: flex;
      justify-content: space-between;
@@ -21,7 +29,10 @@
     padding: 5px;
     margin-bottom: 40px;
 }
-
+.break-title{
+    font-size: 24px;
+    font-weight: 700;
+}
 .break-time{
     display: flex;
     justify-content: space-between;
@@ -33,8 +44,11 @@
 }
 .break-time p{
     background-color: white;
-    border-radius: 40%;
-    padding: 16px;
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: bold;
+   
 
 }
 
@@ -58,6 +72,7 @@
     color: white;
     padding: 4px 10px;
     font-weight: bold;
+    width: 100%;
 
   
   
