description section added

--- a/src/Components/SingleCart/SingleCart.css
+++ b/src/Components/SingleCart/SingleCart.css
@@ -30,7 +30,12 @@
 .card-title{
     font-weight: bold;
     margin-bottom: 10px;
+    font-size: 24px;
+    text-align: center;
 }
+
 .time{
     margin-bottom: 40px;
+    font-weight: 600;
+    font-size: 17px;
 }
