--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -41,9 +41,10 @@
    margin-top: 15px;
    margin-bottom: 40px;
 }
-.break-time p{
+.day-btn{
     background-color: white;
     border-radius: 50%;
+
     padding: 10px;
     font-size: 14px;
     font-weight: bold;
@@ -51,7 +52,7 @@
 
 }
 
-.break-time p:hover{
+.day-btn:hover{
     background-color: blue;
     color: white;
 }
@@ -72,7 +73,7 @@
     padding: 4px 10px;
     font-weight: bold;
     width: 100%;
-
+    transition: 1s;
   
   
 
@@ -83,4 +84,5 @@
 }
 .btn-done{
     text-align: center;
+
 }
